--- a/pollock_simulation.qmd
+++ b/pollock_simulation.qmd
@@ -505,7 +505,7 @@ knitr::kable(summary_df)
 
 ## Monte Carlo Simulations
 
-As shown in @fig-monte-carlo, stochastic variability across 100 runs is summarized with metrics reported in @tbl-mc-stats. We then compare catch trajectories across three strategies: constant $F$ at $F_{MSY}$, the $F_{40\%}$ SPR HCR, and the risk-calibrated HCR based on $F_{target}$. The terminal-year SSB distributions for these strategies are shown in @fig-terminal-ssb-density.
+As shown in @fig-monte-carlo, stochastic variability across 100 runs is summarized with metrics reported in @tbl-mc-stats. We then compare catch trajectories across three strategies: constant $F$ at $F_{MSY}$, the $F_{40\%}$ SPR HCR, and the risk-calibrated HCR based on $F_{target}$. The terminal-year SSB distributions for these strategies are shown in @fig-terminal-ssb-density, with terminal-year catch distributions in @fig-terminal-catch-density.
 
 ```{r monte-carlo}
 #| label: fig-monte-carlo
@@ -857,6 +857,117 @@ p_terminal
 ```
 
 @fig-terminal-ssb-density summarizes terminal-year risk across strategies. A right-shifted density indicates higher terminal SSB, while a heavier left tail indicates greater risk of ending at low biomass. The risk-calibrated HCR is explicitly tuned to limit the combined probability of $SSB < 0.2 B_0$, and the catch-capped HCR further constrains fishing in high-catch years. The relative tail behavior across the four strategies highlights the precautionary differences under each steepness scenario.
+
+```{r terminal-catch-density}
+#| label: fig-terminal-catch-density
+#| fig-cap: "Terminal-year catch distributions by fishing strategy (constant F at Fmsy, FSPR HCR, risk-calibrated HCR, and catch-capped HCR)."
+#| fig-height: 5
+#| fig-width: 10
+
+terminal_catch_const_low <- catch_low[n_years, ] / 1e9
+terminal_catch_const_high <- catch_high[n_years, ] / 1e9
+
+catch_cap <- 1.45e9
+
+terminal_catch_hcr_low <- numeric(n_sims)
+terminal_catch_hcr_high <- numeric(n_sims)
+terminal_catch_ftarget_low <- numeric(n_sims)
+terminal_catch_ftarget_high <- numeric(n_sims)
+terminal_catch_cap_low <- numeric(n_sims)
+terminal_catch_cap_high <- numeric(n_sims)
+
+for (i in 1:n_sims) {
+  sim_l_hcr <- run_simulation_hcr(
+    scenario_low$params,
+    F_target = F40_low,
+    B0 = ref_low$SSB0,
+    catch_cap = NULL,
+    seed = i
+  )
+  sim_h_hcr <- run_simulation_hcr(
+    scenario_high$params,
+    F_target = F40_high,
+    B0 = ref_high$SSB0,
+    catch_cap = NULL,
+    seed = i
+  )
+  sim_l_ftarget <- run_simulation_hcr(
+    scenario_low$params,
+    F_target = Ftarget,
+    B0 = ref_low$SSB0,
+    catch_cap = NULL,
+    seed = i
+  )
+  sim_h_ftarget <- run_simulation_hcr(
+    scenario_high$params,
+    F_target = Ftarget,
+    B0 = ref_high$SSB0,
+    catch_cap = NULL,
+    seed = i
+  )
+  sim_l_cap <- run_simulation_hcr(
+    scenario_low$params,
+    F_target = F40_low,
+    B0 = ref_low$SSB0,
+    catch_cap = catch_cap,
+    seed = i
+  )
+  sim_h_cap <- run_simulation_hcr(
+    scenario_high$params,
+    F_target = F40_high,
+    B0 = ref_high$SSB0,
+    catch_cap = catch_cap,
+    seed = i
+  )
+
+  terminal_catch_hcr_low[i] <- sim_l_hcr$Catch[n_years] / 1e9
+  terminal_catch_hcr_high[i] <- sim_h_hcr$Catch[n_years] / 1e9
+  terminal_catch_ftarget_low[i] <- sim_l_ftarget$Catch[n_years] / 1e9
+  terminal_catch_ftarget_high[i] <- sim_h_ftarget$Catch[n_years] / 1e9
+  terminal_catch_cap_low[i] <- sim_l_cap$Catch[n_years] / 1e9
+  terminal_catch_cap_high[i] <- sim_h_cap$Catch[n_years] / 1e9
+}
+
+terminal_catch_df <- rbind(
+  data.frame(Terminal_Catch = terminal_catch_const_low, Scenario = "h=0.6", Policy = "Const. F"),
+  data.frame(Terminal_Catch = terminal_catch_hcr_low, Scenario = "h=0.6", Policy = "FSPR HCR"),
+  data.frame(Terminal_Catch = terminal_catch_ftarget_low, Scenario = "h=0.6", Policy = "Risk-calibrated HCR"),
+  data.frame(Terminal_Catch = terminal_catch_cap_low, Scenario = "h=0.6", Policy = "FSPR HCR cap"),
+  data.frame(Terminal_Catch = terminal_catch_const_high, Scenario = "h=0.9", Policy = "Const. F"),
+  data.frame(Terminal_Catch = terminal_catch_hcr_high, Scenario = "h=0.9", Policy = "FSPR HCR"),
+  data.frame(Terminal_Catch = terminal_catch_ftarget_high, Scenario = "h=0.9", Policy = "Risk-calibrated HCR"),
+  data.frame(Terminal_Catch = terminal_catch_cap_high, Scenario = "h=0.9", Policy = "FSPR HCR cap")
+)
+
+terminal_catch_df$Policy <- factor(
+  terminal_catch_df$Policy,
+  levels = c("Const. F", "FSPR HCR", "Risk-calibrated HCR", "FSPR HCR cap")
+)
+
+policy_colors <- c(
+  "Const. F" = "#1F77B4",
+  "FSPR HCR" = "#D95F02",
+  "Risk-calibrated HCR" = "#2CA02C",
+  "FSPR HCR cap" = "#9467BD"
+)
+
+p_terminal_catch <- ggplot(
+  terminal_catch_df,
+  aes(x = Terminal_Catch, color = Policy, fill = Policy)
+) +
+  geom_density(alpha = 0.25, size = 1) +
+  #facet_grid(Scenario~., scales="free_y" ) +
+  facet_grid(Scenario~. ) +
+  scale_color_manual(values = policy_colors) +
+  scale_fill_manual(values = policy_colors) +
+  coord_cartesian(xlim = c(0, 2.9),ylim=c(0,1.2)) +
+  labs(x = "Terminal year catch (Mt)", y = "Density", title = "Terminal-year catch distributions") +
+  ggthemes::theme_few()
+
+p_terminal_catch
+```
+
+@fig-terminal-catch-density shows how end-of-period catches differ across strategies. The catch-capped HCR truncates the upper tail by design, while the SPR-based and risk-calibrated HCRs shift mass toward lower catches when biomass is low. As with the SSB distributions, the high-steepness scenario supports higher terminal catches on average, with the spread reflecting recruitment variability and the rules that modulate fishing pressure.
 
 ```{r mc-stats}
 #| label: tbl-mc-stats
@@ -1372,6 +1483,103 @@ p_fp <- ggplot(plot_points, aes(x = Catch_Mt, y = Terminal_SSB_Bmsy, color = Sce
   ggthemes::theme_few()
 
 p_fp
+```
+
+Kobe plots summarize the joint distribution of exploitation and biomass across all years, with quadrants defined by $F/F_{MSY}$ and $SSB/B_{MSY}$. In @fig-kobe-plots, color indicates the fishing strategy and point shape indicates the steepness scenario.
+
+```{r kobe-plots}
+#| label: fig-kobe-plots
+#| fig-cap: "Kobe plot using all annual SSB/Bmsy and F/Fmsy values. Colors show fishing strategy and point shapes show steepness scenario."
+#| fig-height: 5
+#| fig-width: 10
+
+n_years_kobe <- scenario_low$params$n_years
+n_sims_kobe <- n_sims_F
+catch_cap <- 1.45e9
+seed_base_low <- 1200
+seed_base_high <- 1300
+
+make_kobe_const <- function(scenario, seed_base, policy_label) {
+  params <- scenario$params
+  ref_points <- scenario$ref_points
+  out <- vector("list", n_sims_kobe)
+
+  for (i in 1:n_sims_kobe) {
+    sim <- run_simulation(params, F_series = ref_points$Fmsy, seed = seed_base + i)
+    out[[i]] <- data.frame(
+      Scenario = scenario$name,
+      Policy = policy_label,
+      Year = 1:n_years_kobe,
+      SSB_Bmsy = sim$SSB / ref_points$Bmsy,
+      F_Fmsy = sim$F / ref_points$Fmsy,
+      Sim = i
+    )
+  }
+
+  do.call(rbind, out)
+}
+
+make_kobe_hcr <- function(scenario, F_target, B0, catch_cap, seed_base, policy_label) {
+  params <- scenario$params
+  ref_points <- scenario$ref_points
+  out <- vector("list", n_sims_kobe)
+
+  for (i in 1:n_sims_kobe) {
+    sim <- run_simulation_hcr(
+      params,
+      F_target = F_target,
+      B0 = B0,
+      catch_cap = catch_cap,
+      seed = seed_base + i
+    )
+    out[[i]] <- data.frame(
+      Scenario = scenario$name,
+      Policy = policy_label,
+      Year = 1:n_years_kobe,
+      SSB_Bmsy = sim$SSB / ref_points$Bmsy,
+      F_Fmsy = sim$F / ref_points$Fmsy,
+      Sim = i
+    )
+  }
+
+  do.call(rbind, out)
+}
+
+kobe_df <- rbind(
+  make_kobe_const(scenario_low, seed_base_low, "Const. F"),
+  make_kobe_const(scenario_high, seed_base_high, "Const. F"),
+  make_kobe_hcr(scenario_low, F40_low, ref_low$SSB0, NULL, seed_base_low, "FSPR HCR"),
+  make_kobe_hcr(scenario_high, F40_high, ref_high$SSB0, NULL, seed_base_high, "FSPR HCR"),
+  make_kobe_hcr(scenario_low, Ftarget, ref_low$SSB0, NULL, seed_base_low, "Risk-calibrated HCR"),
+  make_kobe_hcr(scenario_high, Ftarget, ref_high$SSB0, NULL, seed_base_high, "Risk-calibrated HCR"),
+  make_kobe_hcr(scenario_low, F40_low, ref_low$SSB0, catch_cap, seed_base_low, "FSPR HCR cap"),
+  make_kobe_hcr(scenario_high, F40_high, ref_high$SSB0, catch_cap, seed_base_high, "FSPR HCR cap")
+)
+
+kobe_df$Scenario_plot <- ifelse(
+  kobe_df$Scenario == scenario_low$name,
+  "h=0.6",
+  "h=0.9"
+)
+
+policy_colors <- c(
+  "Const. F" = "#1F77B4",
+  "FSPR HCR" = "#D95F02",
+  "Risk-calibrated HCR" = "#2CA02C",
+  "FSPR HCR cap" = "#9467BD"
+)
+
+p_kobe <- ggplot(kobe_df, aes(x = SSB_Bmsy, y = F_Fmsy, color = Policy, shape = Scenario_plot)) +
+  geom_point(alpha = 0.15, size = 0.8) +
+  geom_vline(xintercept = 1, linetype = "dashed", color = "gray40") +
+  geom_hline(yintercept = 1, linetype = "dashed", color = "gray40") +
+  scale_color_manual(values = policy_colors) +
+  scale_shape_manual(values = c("h=0.6" = 16, "h=0.9" = 17)) +
+  coord_cartesian(xlim=c(0,4)) +
+  labs(x = "SSB / Bmsy", y = "F / Fmsy", title = "Kobe plots by strategy") +
+  ggthemes::theme_few()
+
+p_kobe
 ```
 
 ```{r catch-variability}
